@@ -24,8 +24,31 @@ lazy val noPublishSettings = Seq(
 )
 
 def gcJavaOptions: Seq[String] = {
+  val javaVersion = System.getProperty("java.version")
+  if (javaVersion.startsWith("1.8")) {
+    jdk8GcJavaOptions
+  } else {
+    jdk11GcJavaOptions
+  }
+}
+
+def jdk8GcJavaOptions: Seq[String] = {
   Seq(
     "-XX:+UseParNewGC",
+    "-XX:+UseConcMarkSweepGC",
+    "-XX:+CMSParallelRemarkEnabled",
+    "-XX:+CMSClassUnloadingEnabled",
+    "-XX:ReservedCodeCacheSize=128m",
+    "-XX:SurvivorRatio=128",
+    "-XX:MaxTenuringThreshold=0",
+    "-Xss8M",
+    "-Xms512M",
+    "-Xmx2G"
+  )
+}
+
+def jdk11GcJavaOptions: Seq[String] = {
+  Seq(
     "-XX:+UseConcMarkSweepGC",
     "-XX:+CMSParallelRemarkEnabled",
     "-XX:+CMSClassUnloadingEnabled",
@@ -90,6 +113,8 @@ lazy val versions = new {
   val slf4j = "1.7.21"
   val snakeyaml = "1.24"
   val specs2 = "2.4.17"
+  val javaxBind = "2.3.0"
+  val javaxActivation = "1.1.1"
 }
 
 lazy val scalaCompilerOptions = scalacOptions ++= Seq(
@@ -555,7 +580,8 @@ lazy val injectUtils = (project in file("inject/inject-utils"))
     moduleName := "inject-utils",
     libraryDependencies ++= Seq(
       "com.twitter" %% "finagle-core" % versions.twLibVersion,
-      "com.twitter" %% "util-core" % versions.twLibVersion
+      "com.twitter" %% "util-core" % versions.twLibVersion,
+      "javax.xml.bind" % "jaxb-api" % versions.javaxBind
     )
   ).dependsOn(
     injectCore % "test->test;compile->compile")
@@ -600,7 +626,8 @@ lazy val utils = project
       "joda-time" % "joda-time" % versions.jodaTime,
       "com.github.nscala-time" %% "nscala-time" % versions.nscalaTime,
       "com.twitter" %% "finagle-http" % versions.twLibVersion,
-      "com.twitter" %% "util-core" % versions.twLibVersion
+      "com.twitter" %% "util-core" % versions.twLibVersion,
+      "javax.activation" % "activation" % versions.javaxActivation
     ),
     publishArtifact in Test := true,
     mappings in (Test, packageBin) := {
